Archive2/6a/38756c9725473f/output
main.cpp:6:12: error: 'const' qualifiers cannot be applied to 'T& {aka int&}'
 void h(T & const) {}
            ^
